--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Flagz Store – Reliable Discord Services & Customization</title>
+  <title>Flagz Store – Reliable Discord Services & Tools </title>
   <meta name="description" content="Flagz Store offers professional Discord Tools, Discord server customization, automation, setups, and reliable online services." />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -263,9 +263,9 @@
     <h1>Reliable Discord Services, Done Right</h1>
     <p>Professional Discord tools, automation, and customization trusted by growing communities.</p>
     <div class="buttons">
-      <a class="btn" href="#">Purchase Services</a>
-      <a class="btn alt" href="#">Join Discord</a>
-      <a class="btn alt" href="#">Join Telegram</a>
+      <a class="https://flagz.mysellauth.com/" href="#">Purchase Services</a>
+      <a class="https://discord.gg/6flagz" href="#">Join Discord</a>
+      <a class="https://t.me/flagzshop" href="#">Join Telegram</a>
     </div>
   </div>
 </header>
@@ -320,7 +320,7 @@
     setTimeout(()=>{document.getElementById('loader').style.display='none'},2500);
   }
   window.addEventListener('load',()=>{document.getElementById('loader').style.display='none'});
-
+  
   // Reveal
   const reveals=document.querySelectorAll('.reveal');
   const obs=new IntersectionObserver(e=>{
