--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
   <div class="credits">
     <div class="credit">
       <img src="https://i.pinimg.com/736x/18/ec/97/18ec9722c68ed9dfd016cc4a804f595f.jpg" alt="Dev">
-      <h3>Owner - Made this websiter</h3>
+      <h3>Owner - Made this website</h3>
       <p>Seth</p>
     </div>
     <div class="credit">
