--- a/index.html
+++ b/index.html
@@ -1,245 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Flagz Store – Reliable Discord Services & Customization</title>
-  <meta name="description" content="Flagz Store offers professional Discord Tools, Discord server customization, automation, setups, and reliable online services." />
+<title>Flagz Store – Reliable Discord Services</title>
+<meta name="description" content="Professional Discord tools, automation, and customization trusted by growing communities.">
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    * { margin:0; padding:0; box-sizing:border-box; font-family:'Inter',sans-serif; }
-    body { background:#000; color:#fff; overflow-x:hidden; }
+<style>
+* { margin:0; padding:0; box-sizing:border-box; font-family:'Inter',sans-serif; }
+body { background:#000; color:#fff; overflow-x:hidden; }
 
-    /* Loader */
-    #loader {
-      position:fixed; inset:0; background:#000;
-      display:flex; align-items:center; justify-content:center;
-      z-index:9999;
-    }
-    .spinner {
-      width:46px; height:46px;
-      border:3px solid #222;
-      border-top:3px solid #fff;
-      border-radius:50%;
-      animation:spin 1s linear infinite;
-    }
-    @keyframes spin { to { transform:rotate(360deg); } }
+/* Loader */
+#loader {
+  position:fixed; inset:0;
+  background:#000;
+  display:flex; align-items:center; justify-content:center;
+  z-index:9999;
+}
+.spinner {
+  width:42px; height:42px;
+  border:3px solid #222;
+  border-top:3px solid #fff;
+  border-radius:50%;
+  animation:spin .9s linear infinite;
+}
+@keyframes spin { to { transform:rotate(360deg); } }
+@media(max-width:768px){#loader{display:none!important;}}
 
-    @media (max-width:768px){ #loader{display:none!important;} }
+/* Background */
+body::before {
+  content:'';
+  position:fixed; inset:0;
+  background:
+    radial-gradient(circle at 25% 20%, rgba(255,255,255,.035), transparent 45%),
+    radial-gradient(circle at 75% 80%, rgba(255,255,255,.025), transparent 45%);
+  animation:bgMove 14s ease-in-out infinite alternate;
+  z-index:-1;
+}
+@keyframes bgMove { to { transform:scale(1.05); } }
 
-    body::before {
-      content:'';
-      position:fixed; inset:0;
-      background:
-        radial-gradient(circle at 20% 20%, rgba(255,255,255,0.04), transparent 40%),
-        radial-gradient(circle at 80% 80%, rgba(255,255,255,0.03), transparent 40%);
-      animation:floatBg 12s ease-in-out infinite alternate;
-      z-index:-1;
-    }
-    @keyframes floatBg { from{transform:scale(1);} to{transform:scale(1.08);} }
+/* NAV */
+nav {
+  position:fixed; top:0; width:100%;
+  background:rgba(0,0,0,.65);
+  backdrop-filter:blur(10px);
+  border-bottom:1px solid #111;
+  z-index:1000;
+}
+.nav-inner {
+  max-width:1200px;
+  margin:auto;
+  padding:18px 20px;
+  display:grid;
+  grid-template-columns:1fr auto 1fr;
+  align-items:center;
+}
+.brand { font-weight:700; }
+.nav-links { display:flex; gap:28px; justify-self:center; }
+.nav-links a {
+  color:#aaa;
+  text-decoration:none;
+  font-size:.95rem;
+  transition:color .25s ease;
+}
+.nav-links a:hover { color:#fff; }
+.support { justify-self:end; font-size:.85rem; color:#777; }
 
-    /* NAV */
-    nav {
-      position:fixed; top:0; width:100%;
-      background:rgba(0,0,0,0.7);
-      backdrop-filter:blur(10px);
-      border-bottom:1px solid #111;
-      z-index:1000;
-    }
+/* HEADER */
+header {
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  padding:120px 20px 60px;
+}
+h1 { font-size:3.05rem; font-weight:700; }
+h2 { font-size:2.15rem; margin-bottom:10px; }
+p { color:#aaa; max-width:760px; margin:14px auto; line-height:1.65; }
 
-    .nav-inner {
-      max-width:1200px;
-      margin:auto;
-      padding:18px 20px;
-      display:grid;
-      grid-template-columns:1fr auto 1fr;
-      align-items:center;
-    }
+/* BUTTONS */
+.buttons {
+  margin-top:32px;
+  display:flex;
+  gap:16px;
+  justify-content:center;
+  flex-wrap:wrap;
+}
+.btn {
+  padding:13px 32px;
+  border-radius:12px;
+  background:#fff;
+  color:#000;
+  font-weight:600;
+  text-decoration:none;
+  transition:transform .2s ease, box-shadow .2s ease;
+}
+.btn.alt {
+  background:transparent;
+  color:#fff;
+  border:1px solid #333;
+}
+.btn:hover {
+  transform:translateY(-2px);
+  box-shadow:0 10px 30px rgba(255,255,255,.18);
+}
 
-    .brand { font-weight:700; }
-    .nav-links { display:flex; gap:30px; justify-self:center; }
-    .nav-links a {
-      color:#aaa;
-      text-decoration:none;
-      font-size:.95rem;
-      position:relative;
-      transition:color .3s;
-    }
-    .nav-links a:hover { color:#fff; }
-    .nav-links a::after {
-      content:'';
-      position:absolute;
-      left:0; bottom:-6px;
-      width:0%; height:2px;
-      background:#fff;
-      transition:width .3s ease;
-    }
-    .nav-links a:hover::after { width:100%; }
+/* SECTIONS */
+section { padding:85px 20px; text-align:center; }
 
-    .support { justify-self:end; font-size:.85rem; color:#777; }
+.grid {
+  max-width:1100px;
+  margin:45px auto 0;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:28px;
+}
+.card {
+  background:#0b0b0b;
+  border:1px solid #111;
+  border-radius:16px;
+  padding:34px;
+  transition:transform .25s ease, box-shadow .25s ease;
+}
+.card:hover {
+  transform:translateY(-4px);
+  box-shadow:0 16px 36px rgba(0,0,0,.55);
+}
 
-    /* HEADER */
-    header {
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      padding:120px 20px 60px;
-    }
+/* STATUS */
+.status-box {
+  max-width:680px;
+  margin:42px auto 0;
+  background:#0b0b0b;
+  border:1px solid #111;
+  border-radius:18px;
+  padding:32px;
+}
+.status-item {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:13px 0;
+  border-bottom:1px solid #111;
+}
+.status-item:last-child{border-bottom:none;}
+.status-left {
+  display:flex;
+  align-items:center;
+  gap:12px;
+  font-weight:500;
+}
+.status-dot {
+  width:11px;
+  height:11px;
+  border-radius:50%;
+}
+.status-green{background:#2ecc71;}
+.status-yellow{background:#f1c40f;}
+.status-red{background:#e74c3c;}
+.status-text{font-size:.9rem;color:#777;}
 
-    h1 { font-size:3.1rem; font-weight:700; }
-    h2 { font-size:2.2rem; margin-bottom:10px; }
-    p { color:#aaa; max-width:760px; margin:15px auto; line-height:1.7; }
+/* CREDITS */
+.credits {
+  display:flex;
+  justify-content:center;
+  gap:50px;
+  flex-wrap:wrap;
+  margin-top:40px;
+}
+.credit {
+  background:#0b0b0b;
+  border:1px solid #111;
+  border-radius:18px;
+  padding:28px;
+  width:240px;
+  transition:transform .25s ease, box-shadow .25s ease;
+}
+.credit:hover {
+  transform:translateY(-4px);
+  box-shadow:0 18px 40px rgba(0,0,0,.6);
+}
+.credit img {
+  width:92px;
+  height:92px;
+  border-radius:50%;
+  object-fit:cover;
+  margin-bottom:15px;
+  border:2px solid #1a1a1a;
+  box-shadow:0 8px 20px rgba(255,255,255,.08);
+  transition:transform .25s ease;
+}
+.credit:hover img {
+  transform:scale(1.04);
+}
 
-    /* BUTTONS */
-    .buttons {
-      margin-top:35px;
-      display:flex;
-      gap:18px;
-      justify-content:center;
-      flex-wrap:wrap;
-    }
+/* FOOTER */
+footer {
+  padding:38px 20px;
+  text-align:center;
+  color:#666;
+  border-top:1px solid #111;
+}
 
-    .btn {
-      position:relative;
-      padding:14px 34px;
-      border-radius:12px;
-      background:#fff;
-      color:#000;
-      font-weight:600;
-      text-decoration:none;
-      overflow:hidden;
-      transition:transform .25s ease, box-shadow .25s ease;
-    }
-
-    .btn.alt {
-      background:transparent;
-      color:#fff;
-      border:1px solid #333;
-    }
-
-    .btn:hover {
-      transform:translateY(-4px) scale(1.03);
-      box-shadow:0 15px 40px rgba(255,255,255,0.25);
-    }
-
-    .btn:active {
-      transform:scale(.97);
-    }
-
-    /* Ripple */
-    .ripple {
-      position:absolute;
-      border-radius:50%;
-      transform:scale(0);
-      animation:ripple 600ms linear;
-      background:rgba(255,255,255,0.6);
-      pointer-events:none;
-    }
-
-    @keyframes ripple {
-      to {
-        transform:scale(4);
-        opacity:0;
-      }
-    }
-
-    /* SECTIONS */
-    section { padding:100px 20px; text-align:center; }
-
-    .grid {
-      max-width:1100px;
-      margin:50px auto 0;
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-      gap:30px;
-    }
-
-    .card {
-      background:#0b0b0b;
-      border:1px solid #111;
-      border-radius:16px;
-      padding:35px;
-      transition:all .45s ease;
-    }
-    .card:hover {
-      transform:translateY(-8px) scale(1.02);
-      box-shadow:0 25px 50px rgba(0,0,0,0.6);
-    }
-
-    .stats {
-      display:flex;
-      justify-content:center;
-      gap:40px;
-      flex-wrap:wrap;
-      margin-top:40px;
-    }
-
-    .stat { font-size:1.5rem; font-weight:700; }
-    .stat span { display:block; font-size:.85rem; color:#777; }
-
-    .reviews {
-      max-width:1000px;
-      margin:40px auto 0;
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-      gap:25px;
-    }
-
-    .review {
-      background:#0b0b0b;
-      border-radius:14px;
-      padding:30px;
-      border:1px solid #111;
-    }
-
-    /* CREDITS */
-    .credits {
-      display:flex;
-      justify-content:center;
-      gap:60px;
-      flex-wrap:wrap;
-      margin-top:40px;
-    }
-
-    .credit {
-      background:#0b0b0b;
-      border:1px solid #111;
-      border-radius:16px;
-      padding:30px;
-      width:240px;
-    }
-
-    .credit img {
-      width:90px;
-      height:90px;
-      border-radius:50%;
-      object-fit:cover;
-      margin-bottom:15px;
-    }
-
-    footer {
-      padding:40px 20px;
-      text-align:center;
-      color:#666;
-      border-top:1px solid #111;
-    }
-
-    .reveal {
-      opacity:0;
-      transform:translateY(60px);
-      transition:all .9s cubic-bezier(.22,.61,.36,1);
-    }
-    .reveal.active {
-      opacity:1;
-      transform:none;
-    }
-  </style>
+/* REVEAL (SHARP + SMOOTH) */
+.reveal {
+  opacity:0;
+  transform:translateY(30px);
+  transition:opacity .55s ease, transform .55s cubic-bezier(.22,.61,.36,1);
+}
+.reveal.active {
+  opacity:1;
+  transform:none;
+}
+</style>
 </head>
+
 <body>
 
 <div id="loader"><div class="spinner"></div></div>
@@ -250,7 +229,7 @@
     <div class="nav-links">
       <a href="#home">Home</a>
       <a href="#services">Services</a>
-      <a href="#reviews">Reviews</a>
+      <a href="#status">Status</a>
       <a href="#credits">Credits</a>
       <a href="#legal">Legal</a>
     </div>
@@ -280,12 +259,23 @@
   </div>
 </section>
 
-<section id="reviews" class="reveal">
-  <h2>Trusted by Clients</h2>
-  <div class="stats">
-    <div class="stat">100+<span>Orders</span></div>
-    <div class="stat">99%<span>Satisfaction</span></div>
-    <div class="stat">24/7<span>Support</span></div>
+<section id="status" class="reveal">
+  <h2>System Status</h2>
+  <p>Live availability of Flagz Store services.</p>
+
+  <div class="status-box">
+    <div class="status-item">
+      <div class="status-left"><span class="status-dot" id="store-status"></span>Store</div>
+      <span class="status-text" id="store-text"></span>
+    </div>
+    <div class="status-item">
+      <div class="status-left"><span class="status-dot" id="tools-status"></span>Tools</div>
+      <span class="status-text" id="tools-text"></span>
+    </div>
+    <div class="status-item">
+      <div class="status-left"><span class="status-dot" id="website-status"></span>Website</div>
+      <span class="status-text" id="website-text"></span>
+    </div>
   </div>
 </section>
 
@@ -293,13 +283,13 @@
   <h2>Credits</h2>
   <div class="credits">
     <div class="credit">
-      <img src="https://i.pinimg.com/736x/18/ec/97/18ec9722c68ed9dfd016cc4a804f595f.jpg" alt="Dev">
-      <h3>Owner - Made this website</h3>
+      <img src="https://i.pinimg.com/736x/18/ec/97/18ec9722c68ed9dfd016cc4a804f595f.jpg">
+      <h3>Website Developer</h3>
       <p>Seth</p>
     </div>
     <div class="credit">
-      <img src="https://i.pinimg.com/1200x/e7/b7/bb/e7b7bba56200a0e523402d527e3bc8ea.jpg" alt="Owner">
-      <h3>CEO</h3>
+      <img src="https://i.pinimg.com/1200x/e7/b7/bb/e7b7bba56200a0e523402d527e3bc8ea.jpg">
+      <h3>Owner / CEO</h3>
       <p>6Flagz</p>
     </div>
   </div>
@@ -315,33 +305,27 @@
 </footer>
 
 <script>
-  // Loader
-  if (window.innerWidth > 768) {
-    setTimeout(()=>{document.getElementById('loader').style.display='none'},2500);
-  }
-  window.addEventListener('load',()=>{document.getElementById('loader').style.display='none'});
+if (window.innerWidth > 768) {
+  setTimeout(()=>loader.style.display='none',1800);
+}
+const reveals=document.querySelectorAll('.reveal');
+const obs=new IntersectionObserver(e=>{
+  e.forEach(x=>x.isIntersecting&&x.target.classList.add('active'));
+},{threshold:.2});
+reveals.forEach(r=>obs.observe(r));
 
-  // Reveal
-  const reveals=document.querySelectorAll('.reveal');
-  const obs=new IntersectionObserver(e=>{
-    e.forEach(x=>x.isIntersecting&&x.target.classList.add('active'));
-  },{threshold:.15});
-  reveals.forEach(r=>obs.observe(r));
-
-  // Ripple effect
-  document.querySelectorAll('.btn').forEach(btn=>{
-    btn.addEventListener('click',e=>{
-      const circle=document.createElement('span');
-      const diameter=Math.max(btn.clientWidth,btn.clientHeight);
-      const radius=diameter/2;
-      circle.style.width=circle.style.height=`${diameter}px`;
-      circle.style.left=`${e.clientX-btn.getBoundingClientRect().left-radius}px`;
-      circle.style.top=`${e.clientY-btn.getBoundingClientRect().top-radius}px`;
-      circle.classList.add('ripple');
-      btn.appendChild(circle);
-      setTimeout(()=>circle.remove(),600);
-    });
-  });
+const statusConfig={
+  store:{state:"green",text:"Operational"},
+  tools:{state:"yellow",text:"Maintenance"},
+  website:{state:"green",text:"Online"}
+};
+function setStatus(d,t,c){
+  document.getElementById(d).classList.add(`status-${c.state}`);
+  document.getElementById(t).textContent=c.text;
+}
+setStatus("store-status","store-text",statusConfig.store);
+setStatus("tools-status","tools-text",statusConfig.tools);
+setStatus("website-status","website-text",statusConfig.website);
 </script>
 
 </body>
