--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ footer {
       <a href="#credits">Credits</a>
       <a href="#legal">Legal</a>
     </div>
-    <div class="support">Support: defnotziu@proton.me</div>
+    <div class="support">Support: legal@flagzstore.xyz</div>
   </div>
 </nav>
 
