--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ footer {
     <p>Professional Discord tools, automation, and customization trusted by growing communities.</p>
     <div class="buttons">
       <a class="btn" href="https://flagz.mysellauth.com/">Purchase Services</a>
-      <a class="btn alt" href="discord.gg/6flagz">Join Discord</a>
-      <a class="btn alt" href="https://t.me/flagzshop">Join Telegram</a>
+      <a class="btn alt" href="discord.gg/flagz">Join Discord</a>
+      <a class="btn alt" href="https://t.me/flagzshop">Join Telegram (Reccomended)</a>
     </div>
   </div>
 </header>
