--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ footer {
     <div class="buttons">
       <a class="btn" href="https://flagz.mysellauth.com/">Purchase Services</a>
       <a class="btn alt" href="discord.gg/flagz">Join Discord</a>
-      <a class="btn alt" href="https://t.me/flagzshop">Join Telegram (Reccomended)</a>
+      <a class="btn alt" href="https://t.me/flagzshop">Join Telegram</a>
     </div>
   </div>
 </header>
