--- a/index.html
+++ b/index.html
@@ -10,64 +10,112 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
-* { margin:0; padding:0; box-sizing:border-box; font-family:'Inter',sans-serif; }
-body { background:#000; color:#fff; overflow-x:hidden; }
+:root {
+  --bg:#000;
+  --soft:#0a0a0a;
+  --border:#141414;
+  --dim:#9a9a9a;
+  --glow:rgba(255,255,255,.15);
+}
 
-/* Loader */
+* {
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Inter',sans-serif;
+}
+
+html { scroll-behavior:smooth; }
+
+body {
+  background:var(--bg);
+  color:#fff;
+  overflow-x:hidden;
+}
+
+/* AMBIENT BACKGROUND */
+body::before {
+  content:'';
+  position:fixed;
+  inset:0;
+  background:
+    radial-gradient(circle at 20% 30%, rgba(255,255,255,.04), transparent 45%),
+    radial-gradient(circle at 80% 70%, rgba(255,255,255,.025), transparent 45%);
+  animation:ambient 18s ease-in-out infinite alternate;
+  z-index:-1;
+}
+@keyframes ambient {
+  to { transform:scale(1.08); }
+}
+
+/* LOADER */
 #loader {
-  position:fixed; inset:0;
+  position:fixed;
+  inset:0;
   background:#000;
-  display:flex; align-items:center; justify-content:center;
+  display:flex;
+  align-items:center;
+  justify-content:center;
   z-index:9999;
 }
 .spinner {
-  width:42px; height:42px;
+  width:44px;
+  height:44px;
   border:3px solid #222;
   border-top:3px solid #fff;
   border-radius:50%;
-  animation:spin .9s linear infinite;
+  animation:spin 1.1s linear infinite;
 }
 @keyframes spin { to { transform:rotate(360deg); } }
-@media(max-width:768px){#loader{display:none!important;}}
-
-/* Background */
-body::before {
-  content:'';
-  position:fixed; inset:0;
-  background:
-    radial-gradient(circle at 25% 20%, rgba(255,255,255,.035), transparent 45%),
-    radial-gradient(circle at 75% 80%, rgba(255,255,255,.025), transparent 45%);
-  animation:bgMove 14s ease-in-out infinite alternate;
-  z-index:-1;
-}
-@keyframes bgMove { to { transform:scale(1.05); } }
 
 /* NAV */
 nav {
-  position:fixed; top:0; width:100%;
-  background:rgba(0,0,0,.65);
-  backdrop-filter:blur(10px);
-  border-bottom:1px solid #111;
+  position:fixed;
+  top:0;
+  width:100%;
+  background:rgba(0,0,0,.6);
+  backdrop-filter:blur(12px);
+  border-bottom:1px solid var(--border);
   z-index:1000;
 }
 .nav-inner {
   max-width:1200px;
   margin:auto;
-  padding:18px 20px;
+  padding:18px 22px;
   display:grid;
   grid-template-columns:1fr auto 1fr;
   align-items:center;
 }
 .brand { font-weight:700; }
-.nav-links { display:flex; gap:28px; justify-self:center; }
+.nav-links {
+  display:flex;
+  gap:32px;
+}
 .nav-links a {
+  position:relative;
   color:#aaa;
   text-decoration:none;
-  font-size:.95rem;
-  transition:color .25s ease;
+  transition:color .35s ease;
+}
+.nav-links a::after {
+  content:'';
+  position:absolute;
+  left:50%;
+  bottom:-6px;
+  width:0;
+  height:2px;
+  background:#fff;
+  border-radius:4px;
+  transition:.4s ease;
+  transform:translateX(-50%);
 }
 .nav-links a:hover { color:#fff; }
-.support { justify-self:end; font-size:.85rem; color:#777; }
+.nav-links a:hover::after { width:100%; }
+.support {
+  justify-self:end;
+  font-size:.85rem;
+  color:#777;
+}
 
 /* HEADER */
 header {
@@ -76,28 +124,33 @@ header {
   align-items:center;
   justify-content:center;
   text-align:center;
-  padding:120px 20px 60px;
+  padding:130px 20px 60px;
 }
-h1 { font-size:3.05rem; font-weight:700; }
-h2 { font-size:2.15rem; margin-bottom:10px; }
-p { color:#aaa; max-width:760px; margin:14px auto; line-height:1.65; }
+h1 { font-size:3.1rem; }
+h2 { font-size:2.2rem; margin-bottom:12px; }
+p {
+  color:var(--dim);
+  max-width:760px;
+  margin:16px auto;
+  line-height:1.65;
+}
 
 /* BUTTONS */
 .buttons {
-  margin-top:32px;
+  margin-top:36px;
   display:flex;
-  gap:16px;
+  gap:18px;
   justify-content:center;
   flex-wrap:wrap;
 }
 .btn {
-  padding:13px 32px;
-  border-radius:12px;
+  padding:14px 36px;
+  border-radius:14px;
   background:#fff;
   color:#000;
   font-weight:600;
   text-decoration:none;
-  transition:transform .2s ease, box-shadow .2s ease;
+  transition:.35s ease;
 }
 .btn.alt {
   background:transparent;
@@ -105,54 +158,77 @@ p { color:#aaa; max-width:760px; margin:14px auto; line-height:1.65; }
   border:1px solid #333;
 }
 .btn:hover {
-  transform:translateY(-2px);
-  box-shadow:0 10px 30px rgba(255,255,255,.18);
+  transform:translateY(-3px);
+  box-shadow:0 14px 40px rgba(255,255,255,.18);
 }
+.btn:active { transform:scale(.96); }
 
 /* SECTIONS */
-section { padding:85px 20px; text-align:center; }
+section {
+  padding:95px 20px;
+  text-align:center;
+}
+
+/* PARALLAX CARDS */
+.grid, .credits {
+  perspective:1200px;
+}
+
+.card, .credit {
+  position:relative;
+  background:var(--soft);
+  border:1px solid var(--border);
+  border-radius:20px;
+  padding:36px;
+  transition:
+    transform .2s ease,
+    box-shadow .2s ease;
+  transform-style:preserve-3d;
+  overflow:hidden;
+}
+
+/* INNER GLOW */
+.card::before,
+.credit::before {
+  content:'';
+  position:absolute;
+  inset:-40%;
+  background:radial-gradient(circle, var(--glow), transparent 60%);
+  opacity:0;
+  transition:.3s ease;
+}
+.card:hover::before,
+.credit:hover::before {
+  opacity:.6;
+}
 
 .grid {
   max-width:1100px;
-  margin:45px auto 0;
+  margin:48px auto 0;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:28px;
-}
-.card {
-  background:#0b0b0b;
-  border:1px solid #111;
-  border-radius:16px;
-  padding:34px;
-  transition:transform .25s ease, box-shadow .25s ease;
-}
-.card:hover {
-  transform:translateY(-4px);
-  box-shadow:0 16px 36px rgba(0,0,0,.55);
+  gap:30px;
 }
 
 /* STATUS */
 .status-box {
   max-width:680px;
-  margin:42px auto 0;
-  background:#0b0b0b;
-  border:1px solid #111;
-  border-radius:18px;
-  padding:32px;
+  margin:44px auto 0;
+  background:var(--soft);
+  border:1px solid var(--border);
+  border-radius:20px;
+  padding:34px;
 }
 .status-item {
   display:flex;
   justify-content:space-between;
-  align-items:center;
-  padding:13px 0;
-  border-bottom:1px solid #111;
+  padding:14px 0;
+  border-bottom:1px solid var(--border);
 }
 .status-item:last-child{border-bottom:none;}
 .status-left {
   display:flex;
-  align-items:center;
   gap:12px;
-  font-weight:500;
 }
 .status-dot {
   width:11px;
@@ -162,55 +238,37 @@ section { padding:85px 20px; text-align:center; }
 .status-green{background:#2ecc71;}
 .status-yellow{background:#f1c40f;}
 .status-red{background:#e74c3c;}
-.status-text{font-size:.9rem;color:#777;}
+.status-text { color:#777; }
 
 /* CREDITS */
 .credits {
   display:flex;
   justify-content:center;
-  gap:50px;
+  gap:52px;
   flex-wrap:wrap;
-  margin-top:40px;
-}
-.credit {
-  background:#0b0b0b;
-  border:1px solid #111;
-  border-radius:18px;
-  padding:28px;
-  width:240px;
-  transition:transform .25s ease, box-shadow .25s ease;
-}
-.credit:hover {
-  transform:translateY(-4px);
-  box-shadow:0 18px 40px rgba(0,0,0,.6);
+  margin-top:42px;
 }
 .credit img {
-  width:92px;
-  height:92px;
+  width:94px;
+  height:94px;
   border-radius:50%;
-  object-fit:cover;
-  margin-bottom:15px;
+  margin-bottom:16px;
   border:2px solid #1a1a1a;
-  box-shadow:0 8px 20px rgba(255,255,255,.08);
-  transition:transform .25s ease;
-}
-.credit:hover img {
-  transform:scale(1.04);
 }
 
 /* FOOTER */
 footer {
-  padding:38px 20px;
+  padding:40px 20px;
   text-align:center;
   color:#666;
-  border-top:1px solid #111;
+  border-top:1px solid var(--border);
 }
 
-/* REVEAL (SHARP + SMOOTH) */
+/* REVEAL */
 .reveal {
   opacity:0;
   transform:translateY(30px);
-  transition:opacity .55s ease, transform .55s cubic-bezier(.22,.61,.36,1);
+  transition:.8s ease;
 }
 .reveal.active {
   opacity:1;
@@ -233,49 +291,28 @@ footer {
       <a href="#credits">Credits</a>
       <a href="#legal">Legal</a>
     </div>
-    <div class="support">Support: legal@flagzstore.xyz</div>
+    <div class="support">legal@flagzstore.xyz</div>
   </div>
 </nav>
 
 <header id="home" class="reveal">
   <div>
     <h1>Reliable Discord Services, Done Right</h1>
-    <p>Professional Discord tools, automation, and customization trusted by growing communities.</p>
+    <p>Professional Discord tools trusted by growing communities.</p>
     <div class="buttons">
-      <a class="btn" href="https://flagz.mysellauth.com/">Purchase Services</a>
-      <a class="btn alt" href="discord.gg/flagz">Join Discord</a>
-      <a class="btn alt" href="https://t.me/flagzshop">Join Telegram</a>
+      <a class="btn" href="#">Purchase Services</a>
+      <a class="btn alt" href="#">Join Discord</a>
     </div>
   </div>
 </header>
 
 <section id="services" class="reveal">
-  <h2>Why Choose Flagz Store</h2>
+  <h2>Why Choose Flagz</h2>
   <div class="grid">
-    <div class="card"><h3>Professional Quality</h3><p>Clean scalable setups.</p></div>
-    <div class="card"><h3>Fast Delivery</h3><p>Quick turnaround times.</p></div>
-    <div class="card"><h3>Secure Payments</h3><p>Trusted checkout.</p></div>
-    <div class="card"><h3>Custom Solutions</h3><p>Advanced automation.</p></div>
-  </div>
-</section>
-
-<section id="status" class="reveal">
-  <h2>System Status</h2>
-  <p>Live availability of Flagz Store services.</p>
-
-  <div class="status-box">
-    <div class="status-item">
-      <div class="status-left"><span class="status-dot" id="store-status"></span>Store</div>
-      <span class="status-text" id="store-text"></span>
-    </div>
-    <div class="status-item">
-      <div class="status-left"><span class="status-dot" id="tools-status"></span>Tools</div>
-      <span class="status-text" id="tools-text"></span>
-    </div>
-    <div class="status-item">
-      <div class="status-left"><span class="status-dot" id="website-status"></span>Website</div>
-      <span class="status-text" id="website-text"></span>
-    </div>
+    <div class="card"><h3>Professional</h3><p>Clean scalable setups.</p></div>
+    <div class="card"><h3>Fast</h3><p>Quick turnaround.</p></div>
+    <div class="card"><h3>Secure</h3><p>Trusted checkout.</p></div>
+    <div class="card"><h3>Custom</h3><p>Advanced automation.</p></div>
   </div>
 </section>
 
@@ -284,48 +321,50 @@ footer {
   <div class="credits">
     <div class="credit">
       <img src="https://i.pinimg.com/736x/18/ec/97/18ec9722c68ed9dfd016cc4a804f595f.jpg">
-      <h3>Website Developer</h3>
+      <h3>Developer</h3>
       <p>Seth</p>
     </div>
     <div class="credit">
       <img src="https://i.pinimg.com/1200x/e7/b7/bb/e7b7bba56200a0e523402d527e3bc8ea.jpg">
-      <h3>Owner / CEO</h3>
+      <h3>Owner</h3>
       <p>6Flagz</p>
     </div>
   </div>
 </section>
 
 <section id="legal" class="reveal">
-  <h2>Legal Information</h2>
-  <p>Flagz Store is not affiliated with Discord Inc. All services are original and compliant.</p>
+  <h2>Legal</h2>
+  <p>Not affiliated with Discord Inc.</p>
 </section>
 
-<footer>
-  © 2025 Flagz Store — Developer: Seth | Owner: 6Flagz
-</footer>
+<footer>© 2025 Flagz Store</footer>
 
 <script>
-if (window.innerWidth > 768) {
-  setTimeout(()=>loader.style.display='none',1800);
-}
-const reveals=document.querySelectorAll('.reveal');
+/* LOADER */
+setTimeout(()=>loader.style.display='none',1600);
+
+/* REVEAL */
 const obs=new IntersectionObserver(e=>{
   e.forEach(x=>x.isIntersecting&&x.target.classList.add('active'));
 },{threshold:.2});
-reveals.forEach(r=>obs.observe(r));
+document.querySelectorAll('.reveal').forEach(r=>obs.observe(r));
 
-const statusConfig={
-  store:{state:"green",text:"Operational"},
-  tools:{state:"yellow",text:"Maintenance"},
-  website:{state:"green",text:"Online"}
-};
-function setStatus(d,t,c){
-  document.getElementById(d).classList.add(`status-${c.state}`);
-  document.getElementById(t).textContent=c.text;
-}
-setStatus("store-status","store-text",statusConfig.store);
-setStatus("tools-status","tools-text",statusConfig.tools);
-setStatus("website-status","website-text",statusConfig.website);
+/* MOUSE PARALLAX */
+document.querySelectorAll('.card,.credit').forEach(el=>{
+  el.addEventListener('mousemove',e=>{
+    const r=el.getBoundingClientRect();
+    const x=e.clientX-r.left;
+    const y=e.clientY-r.top;
+    const rx=((y/r.height)-0.5)*-10;
+    const ry=((x/r.width)-0.5)*10;
+    el.style.transform=`rotateX(${rx}deg) rotateY(${ry}deg) translateY(-6px)`;
+    el.style.boxShadow=`${-ry}px ${rx}px 40px rgba(0,0,0,.6)`;
+  });
+  el.addEventListener('mouseleave',()=>{
+    el.style.transform='';
+    el.style.boxShadow='';
+  });
+});
 </script>
 
 </body>
