--- a/index.html
+++ b/index.html
@@ -300,8 +300,9 @@ footer {
     <h1>Reliable Discord Services, Done Right</h1>
     <p>Professional Discord tools trusted by growing communities.</p>
     <div class="buttons">
-      <a class="btn" href="#">Purchase Services</a>
-      <a class="btn alt" href="#">Join Discord</a>
+      <a class="btn" href="https://flagz.mysellauth.com/">Purchase Services</a>
+      <a class="btn alt" href="discord.gg/flagz">Join Discord</a>
+      <a class="btn alt" href="https://t.me/flagzshop">Join Telegram</a>
     </div>
   </div>
 </header>
@@ -334,7 +335,7 @@ footer {
 
 <section id="legal" class="reveal">
   <h2>Legal</h2>
-  <p>Not affiliated with Discord Inc.</p>
+  <p>Not affiliated with Discord Inc. If any issues please contact: legal@flagzstore.xyz</p>
 </section>
 
 <footer>© 2025 Flagz Store</footer>
